--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>在线图片编辑器</title>
+    <title>在线亚克力制品编辑器</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -226,7 +226,7 @@
         <p>2. 上传的图片会显示在左侧，点击图片将其添加到画布。</p>
         <p>3. 在右侧，您可以调整画布的大小，查看和编辑选中元素的信息。</p>
         <p>4. 右键点击画布中的元素可以显示菜单，进行删除、置顶或置底操作。</p>
-        <p>5. 点击“导出图像”按钮，将弹出预览，确认后进行导出。</p>
+        <p>5. 点击“导出图像”按钮，将弹出预览，确认后进行导出。7/1 4:09</p>
         <button id="closeTutorialButton">关闭</button>
     </div>
 
